Add a new redis cache manager, update getLogs() in order to deal with the new cache interface

--- a/package.json
+++ b/package.json
@@ -36,5 +36,7 @@
     "preversion": "yarn lint && yarn test && yarn build",
     "prepublish": "yarn lint && yarn test && yarn build"
   },
-  "dependencies": {}
+  "dependencies": {
+    "redis": "^2.8.0"
+  }
 }
