--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "email": "maxime.biais@gmail.com"
   },
   "main": "dist/index.js",
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn build && yarn lint"
+    }
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
@@ -17,6 +22,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
+    "husky": "^1.3.1",
     "jest": "^19.0.2",
     "jest-cli": "^20.0.0",
     "web3": "^1.0.0-beta.37"
