--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.js",
   "husky": {
     "hooks": {
-      "pre-commit": "yarn build"
+      "pre-commit": "yarn build && yarn lint"
     }
   },
   "devDependencies": {
@@ -21,12 +21,6 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/redis": "^2.8.10",
     "@types/web3": "^1.0.18",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.3",
     "husky": "^1.3.1",
     "jest": "^19.0.2",
     "jest-cli": "^20.0.0",
@@ -42,6 +36,7 @@
     "cli-test": "ts-node test/cli-test.ts",
     "test": "jest",
     "clean": "del dist",
+    "lint": "tslint -p .",
     "coverage": "yarn test -- --coverage",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
